--- a/htdocs/test-mobly-api/.env.example
+++ b/htdocs/test-mobly-api/.env.example
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:O+dseYw4U6XG7+u1x1bGBcPeZDcDbBCADKKbBpSQd+s=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=172.17.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=test-mobly-db
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=mobly!@123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
