--- a/nginx/sites/test-mobly-api.conf
+++ b/nginx/sites/test-mobly-api.conf
@@ -1,12 +1,14 @@
 server {
+    listen 8080;
+    
 	root /var/www/html/test-mobly-api/public;
 	index index.php index.html index.htm;
-
+    
 	# Acesse o site por from http://localhost/
-	server_name 127.0.0.2;
+	server_name localhost;
 
 	location / {
-         try_files $uri $uri/ /index.php$is_args$args;
+        try_files $uri $uri/ /index.php$is_args$args;
     }
 
 	location ~ \.php$ {
